--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@ button {
 }
 
 .purpleButton{
-  background-color: purple;
+  background-color: lavender;
 }
 
 .pinkButton{
-  background-color: pink;
+  background-color: fuchsia;
 }
 
 table, th, td {
