--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ button {
   background-color: lightblue;
 }
 .yellowButton{
-  background-color: yellow;
+  background-color: #f6ff64;
 }
 
 .purpleButton{
