--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://i.imgur.com/mPPDp32.png");
+  background-image: url("https://i.imgur.com/bHqSrXw.png");
   background-repeat: repeat;
   padding: 0 30px 0 30px;
 }
