--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body {
-  background-image: url("https://i.imgur.com/dmQKcT0.png");
+  background-image: url("https://i.imgur.com/opg6px9.png");
   background-repeat: repeat;
   background-color: #f0ffff;
-  opacity: 0.5;
   padding: 0 30px 0 30px;
 }
 
