--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://i.imgur.com/F2Rnkx0.png");
+  background-image: url(bgimg.png);
   background-repeat: repeat;
   background-color: #f0ffff;
   padding: 0 30px 0 30px;
